# patova

./: .gitignore  00_README_PLAN_GENERAL.md  BUILD_SUMMARY.md  IOS_UI_REDESIGN_PLAN.md  Importación Pases G4 - 1e726221-aa85-4db5-8859-36f19bc97c85.xlsx  M00_OpenCode_DeepSeek_Context7_Setup.md  M01_Backend_Base_FastAPI.md  M02_Database_PostgreSQL_Redis_Alembic.md  M03_DataPipeline_Seed_ENACOM.md  M04_Validation_API_Cache_Performance.md  M05_Crowdsourcing_Reports_Worker_Scoring.md  M06_Admin_Panel_Metrics.md  M07_Android_Base_Project_Permissions.md  M08_Android_CallScreening_API_LocalCache.md  M09_Android_UI_History_Report_Feedback.md  M10_Testing_Load_E2E_QualityGates.md  M11_Infra_CI_CD_Deploy_Observability.md  M12_Beta_Cerrada_Runbook_Operacion.md  Makefile  README.md  ios.md  ios_integration_spec.md  netlify.toml  test_mp_preference.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03f350fa8cb0_add_subscription_tables.py  4c3b3f82fc0f_add_feedback_events.py  6e25a3c014b6_refactor_to_bigint_and_predictive_.py  a7d1e2f3b4c5_add_user_behavior_tables.py  f28faf7e6678_add_import_count_to_phone_number.py  f94ba9b50d68_initial_schema.py
backend/scripts/: entrypoint.sh  seed_scraper.py
backend/src/numguard/: main.py
backend/src/numguard/admin/: routes.py
backend/src/numguard/api/: deps.py  router.py
backend/src/numguard/core/: cache.py  config.py  metrics.py  security.py
backend/src/numguard/db/: redis.py  session.py
backend/src/numguard/models/: __init__.py  base.py  device_config.py  enums.py  subscription.py  whitelist_entry.py
backend/src/numguard/schemas/: common.py  device_config.py  feedback.py  reports.py  sync.py  validation.py
backend/src/numguard/services/: abuse_guard.py  cache_service.py  phone_normalization.py  prefix_matching.py  rate_limit.py  report_service.py  scoring_service.py  stats_service.py  sync.py  validation_service.py
backend/src/numguard/templates/: landing.html
backend/src/numguard/workers/: celery_app.py  tasks.py
backend/src/numguard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/patova/: main.py
backend/src/patova/admin/: routes.py
backend/src/patova/api/: deps.py  router.py
backend/src/patova/core/: cache.py  config.py  logging.py  metrics.py  security.py
backend/src/patova/db/: redis.py  session.py
backend/src/patova/models/: __init__.py  area_prefix.py  base.py  blacklist_entry.py  blocked_call_log.py  (+7 more)
backend/tests/: conftest.py  test_abuse_guard.py  test_admin_dashboard.py  test_api_endpoints.py  test_cache_resilience.py  test_cache_service.py  test_config.py  test_cors.py  test_db_models.py  test_health.py  test_masking.py  test_phone_normalization.py  test_production_resilience.py  test_redis_client.py  test_reports_endpoint.py  test_reputation_endpoint.py  test_scoring_engine.py  test_scoring_service.py  test_security.py  test_seed_import.py  test_spam_engine.py  test_stats_endpoint.py  test_sync.py  test_validate_endpoint.py  test_validation_service.py
backend/tests/contracts/: test_validate_contract.py
backend/tests/load/: locustfile_validate.py
(+298 files in other folders)
