[project]
name = "numguard-backend"
version = "0.1.0"
description = "NumGuard MVP Validation API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "psycopg[binary]>=3.2",
  "pandas>=2.2",
  "phonenumbers>=8.13",
  "typer>=0.12",
  "openpyxl>=3.1",
  "slowapi>=0.1",
  "celery>=5.3",
  "jinja2>=3.1",
  "prometheus-client>=0.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
  "testcontainers>=4.8",
  "pytest-dotenv>=0.5",
  "pytest-cov>=5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", ".pytest_cache", ".ruff_cache", "alembic/versions/", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "db: tests that require an isolated database (run with --run-db flag)",
]
addopts = "-m \"not db\""

[tool.setuptools.packages.find]
where = ["src"]
