[project]
name = "numguard-backend"
version = "0.1.0"
description = "NumGuard MVP Validation API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "psycopg[binary]>=3.2",
  "pandas>=2.2",
  "phonenumbers>=8.13",
  "typer>=0.12",
  "openpyxl>=3.1",
  "slowapi>=0.1",
  "celery>=5.3",
  "jinja2>=3.1",
  "prometheus-client>=0.19",
  "sentry-sdk>=2.0",
  "gunicorn>=23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=6.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
  "testcontainers>=4.8",
  "locust>=2.31",
  "bandit>=1.8",
  "pip-audit>=2.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", ".pytest_cache", ".ruff_cache", "alembic/versions/", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"tests/load/*" = ["ALL"]
"src/numguard/api/v1/*.py" = ["B008"]
"src/numguard/admin/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests with no external dependencies",
    "integration: tests requiring database, redis, or external services",
    "load: performance and load tests",
    "contract: API contract validation tests",
]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".mypy_cache", ".ruff_cache", ".pytest_cache"]

[tool.setuptools.packages.find]
where = ["src"]
